# calculator

./: calculator.sln  main.py  run.sh
MyCalculator/: Program.cs
env/: pyvenv.cfg
server/: CMakeLists.txt  addition.c  addition.h  division.c  division.h  multiplication.c  multiplication.h  server.c  subtraction.c  subtraction.h
